added image to page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-
+    <div class="center">
+        <img src="./images/teko1.png" alt="lxteko" class="main">
+    </div>
 </body>
 
 </html>
