added basic info

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 
 <body>
     <div class="center">
+        <div class="text-wrapper">
+            <div class="title">lxteko</div>
+            <div class="subtitle">
+                <a href="https://bsky.app/profile/lxteko.bsky.social" class="link">bsky</a><a href="twitter"
+                    class="link">twitter</a><a href="https://ko-fi.com/lxteko" class="link">ko-fi</a>
+            </div>
+        </div>
         <img src="./images/teko1.png" alt="lxteko" class="main">
     </div>
 </body>
