--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>lxteko</title>
 </head>
@@ -13,7 +13,7 @@
         <div class="text-wrapper">
             <div class="title">lxteko</div>
             <div class="subtitle">
-                <a href="https://bsky.app/profile/lxteko.bsky.social" class="link">bsky</a><a href="twitter"
+                <a href="https://bsky.app/profile/lxteko.bsky.social" class="link">bsky</a><a href="x.com/lxteko"
                     class="link">twitter</a><a href="https://ko-fi.com/lxteko" class="link">ko-fi</a>
             </div>
         </div>
