--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
         <div class="text-wrapper">
             <div class="title">lxteko</div>
             <div class="subtitle">
-                <a href="https://bsky.app/profile/lxteko.bsky.social" class="link">bsky</a><a href="x.com/lxteko"
-                    class="link">twitter</a><a href="https://ko-fi.com/lxteko" class="link">ko-fi</a>
+                <a href="https://bsky.app/profile/lxteko.bsky.social" class="link">bsky</a><a
+                    href="https://x.com/lxteko" class="link">twitter</a><a href="https://ko-fi.com/lxteko"
+                    class="link">ko-fi</a>
             </div>
         </div>
         <img src="./images/teko1.png" alt="lxteko" class="main">
