--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <div class="backgrounds">
+        <div class="background">eeerrrrrrmmmmmmmm.......</div>
+    </div>
     <div class="center">
         <div class="text-wrapper">
             <div class="title">lxteko</div>
@@ -20,6 +23,7 @@
         </div>
         <img src="./images/teko1.png" alt="lxteko" class="main">
     </div>
+    <script src="./index.js" defer></script>
 </body>
 
 </html>
