--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Schoolbell&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>lxteko</title>
 </head>
 
-<body>
+<body style="visibility: hidden;">
+    <script>
+        window.addEventListener("load", (e) => {
+            document.body.style.visibility = "visible";
+        })
+    </script>
     <div class="backgrounds">
         <div class="background">eeerrrrrrmmmmmmmm.......</div>
     </div>
